--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -583,11 +583,11 @@
             <objects>
                 <viewController storyboardIdentifier="EventDetailsViewController" hidesBottomBarWhenPushed="YES" id="L4h-S1-xy1" customClass="EventDetailsViewController" customModule="event_manager_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FGH-yj-AM8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qfq-hg-Npe">
-                                <rect key="frame" x="0.0" y="151" width="375" height="452"/>
+                                <rect key="frame" x="0.0" y="187" width="375" height="480"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="hyk-Jy-SJK">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
@@ -812,18 +812,18 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B4C-z6-d1n">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="167"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yFv-MX-0Et">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VJf-HN-4bm">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahL-0Z-qUf">
-                                        <rect key="frame" x="8" y="119.5" width="359" height="23.5"/>
+                                        <rect key="frame" x="8" y="133" width="359" height="26"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -945,11 +945,11 @@
             <objects>
                 <viewController storyboardIdentifier="PlaceDetailsViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Jhh-Yw-SDo" customClass="PlaceDetailsViewController" customModule="event_manager_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qjR-i1-hkB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vjs-h5-8xq">
-                                <rect key="frame" x="0.0" y="151" width="375" height="452"/>
+                                <rect key="frame" x="0.0" y="187" width="375" height="480"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="66" id="tCV-bO-Nlu" customClass="EventCell" customModule="event_manager_ios" customModuleProvider="target">
@@ -1034,18 +1034,18 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pu7-4y-ZhE">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="167"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r21-0F-ghm">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dEK-ck-H7T">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="151"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1T-Le-bdh">
-                                        <rect key="frame" x="8" y="120.5" width="359" height="22.5"/>
+                                        <rect key="frame" x="8" y="133.5" width="359" height="25.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -1060,8 +1060,9 @@
                                     <constraint firstItem="A1T-Le-bdh" firstAttribute="height" secondItem="r21-0F-ghm" secondAttribute="height" multiplier="0.15" priority="900" id="E2t-ov-kTa"/>
                                     <constraint firstItem="A1T-Le-bdh" firstAttribute="leading" secondItem="r21-0F-ghm" secondAttribute="leading" constant="8" id="LcG-IV-xwv"/>
                                     <constraint firstItem="dEK-ck-H7T" firstAttribute="height" secondItem="Pu7-4y-ZhE" secondAttribute="height" id="NcR-cD-1t8"/>
-                                    <constraint firstItem="A1T-Le-bdh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="r21-0F-ghm" secondAttribute="top" id="XwM-FC-EMb"/>
+                                    <constraint firstItem="A1T-Le-bdh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="r21-0F-ghm" secondAttribute="top" priority="900" id="XwM-FC-EMb"/>
                                     <constraint firstItem="r21-0F-ghm" firstAttribute="leading" secondItem="Pu7-4y-ZhE" secondAttribute="leading" id="aeW-hr-PYN"/>
+                                    <constraint firstAttribute="height" id="fUz-kg-1MQ"/>
                                     <constraint firstItem="r21-0F-ghm" firstAttribute="top" secondItem="Pu7-4y-ZhE" secondAttribute="top" id="mE1-HG-b39"/>
                                     <constraint firstAttribute="bottom" secondItem="r21-0F-ghm" secondAttribute="bottom" id="q4N-oQ-SgF"/>
                                     <constraint firstItem="dEK-ck-H7T" firstAttribute="leading" secondItem="r21-0F-ghm" secondAttribute="leading" id="rHi-Ex-E6Z"/>
@@ -1079,13 +1080,18 @@
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
                                 </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="fUz-kg-1MQ"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="vjs-h5-8xq" firstAttribute="width" secondItem="qjR-i1-hkB" secondAttribute="width" id="9zr-EF-FAL"/>
                             <constraint firstItem="Pu7-4y-ZhE" firstAttribute="top" secondItem="MDA-Ws-rFO" secondAttribute="top" id="dwy-d8-q2C"/>
-                            <constraint firstItem="Pu7-4y-ZhE" firstAttribute="height" secondItem="qjR-i1-hkB" secondAttribute="height" multiplier="0.25" id="eff-hR-X2r"/>
+                            <constraint firstItem="Pu7-4y-ZhE" firstAttribute="height" secondItem="qjR-i1-hkB" secondAttribute="height" multiplier="0.25" priority="900" id="eff-hR-X2r"/>
                             <constraint firstItem="MDA-Ws-rFO" firstAttribute="bottom" secondItem="vjs-h5-8xq" secondAttribute="bottom" id="gzk-LY-4BW"/>
                             <constraint firstItem="vjs-h5-8xq" firstAttribute="centerX" secondItem="MDA-Ws-rFO" secondAttribute="centerX" id="hu4-HL-H1b"/>
                             <constraint firstItem="Pu7-4y-ZhE" firstAttribute="centerX" secondItem="MDA-Ws-rFO" secondAttribute="centerX" id="i9p-O8-oNb"/>
@@ -1103,7 +1109,10 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addressLabel" destination="A1T-Le-bdh" id="OSW-km-orB"/>
+                        <outlet property="gradientView" destination="dEK-ck-H7T" id="gmC-gf-tFR"/>
                         <outlet property="imageViewBottomConstraint" destination="q4N-oQ-SgF" id="GeY-mH-qti"/>
+                        <outlet property="imageViewInvisibleConstraint" destination="fUz-kg-1MQ" id="nH7-5Q-5Dp"/>
+                        <outlet property="placeImageView" destination="r21-0F-ghm" id="x8n-Mr-qVO"/>
                         <outlet property="tableView" destination="vjs-h5-8xq" id="A7V-kg-cnO"/>
                         <segue destination="L4h-S1-xy1" kind="show" identifier="ShowEventDetails" id="tTR-s2-epm"/>
                     </connections>
@@ -1126,7 +1135,7 @@
         <image name="time" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="19h-hy-mDh"/>
+        <segue reference="kLM-v0-4HG"/>
         <segue reference="9Qy-Gf-gKA"/>
         <segue reference="tTR-s2-epm"/>
     </inferredMetricsTieBreakers>
