--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -1179,6 +1179,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="19h-hy-mDh"/>
         <segue reference="lrf-W2-5h5"/>
-        <segue reference="tTR-s2-epm"/>
+        <segue reference="zoX-68-gK2"/>
     </inferredMetricsTieBreakers>
 </document>
